HEAD
	+ Fix regression deleting share directory after removing ebox ACL
	+ Fix bug with shared state for shares and roaming profiles sync
5.1.1
	+ Add administrators also to write list in smb.conf
5.1
	+ Domain is now a menu item instead of a folder with just one subitem
	+ Add notice about GPO management in Domain section
	+ Set homeDrive, homeDirectory and profilePath attributes after
	  adding new users without need of explicit save change operation
	+ Remove no longer required zentyal user ACLs on share paths
	+ Comment field is now optional when adding a share
	+ Explicit set of valid users write/read/admin lists for share security
	  unless "unmanaged_acls = yes" is set in /etc/zentyal/samba.conf
	+ Check domain functional level <= 2008 R2 before joining
	+ Manage thumbnailPhotos from share in samba.conf and edit user
	  UI in commercial editions
	+ Do not allow to add OUs inside containers
	+ Allow to execute ad-migrate directly
	+ Disable expiration for Kerberos service accounts
	+ Add ZFS support for Samba Shares
	+ Avoid no such daemon error in zentyal.log when module not configured
5.0.10
	+ Integrate Samba 4.6
	+ Remove manipulation or resolv.conf in standalone DC provision
	  no longer required with the fix in zentyal-dns 5.0.3
	+ Different resolv.conf manipulation in ADC depending if we
	  are joining a Windows DC or a Zentyal one, always use
	  127.0.0.1 when the provision is finished
5.0.9
	+ Fix enable-quotas
5.0.8
	+ Depend on new Samba 4.5.8+dfsg-2 (fixes CVE-2017-7494)
5.0.7
	+ Add proper template shell and homedir in smb.conf
	+ Support for bridged mode in sambaInterfaces method
5.0.6
	+ Depend on new Samba 4.5.8
	+ Fix setting of ACLs for 'Domain Users' group
5.0.5
	+ Depend on new Samba 4.5.6
5.0.4
	+ Depend on new Samba 4.5.4
	+ Remove trigger that causes dpkg error on samba upgrade
5.0.3
	+ Fix wrong management of resolv.conf during ADC provision
	+ Fix provision when netbios name and hostname are different
5.0.2